fixed broken layout with large error message strings on mobile

--- a/public/stylesheets/media-extrasmall.css
+++ b/public/stylesheets/media-extrasmall.css
@@ -464,6 +464,12 @@ a.panel-title {
     cursor: pointer;
 }
 
+span.validationResultsMatchMessageBody,
+span.validationResultsWarningMessageBody,
+span.validationResultsErrorMessageBody {
+    word-wrap: break-word;
+}
+
 #validationResultsErrorsCount,
 #validationResultsWarningsCount,
 #validationResultsMatchesCount {
